[tool.poetry]
name = "c4v-py"
version = "0.1.0.dev020221115"
description = "Code for Venezuela python library."
authors = ["Edilmo Palencia <edilmo@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://www.codeforvenezuela.org/"
repository = "https://github.com/dieko95/c4v-py"
keywords = [
    "NLP",
    "NLU",
    "Machine Learning",
    "ipython",
    "jupyter",
    "widgets",
    "brat",
    "annotation",
    ]
packages = [
    { include = "c4v", from = "src" },
]
include = ["*.html", "*.ini", "*.json",]

[tool.poetry.dependencies]
python = "^3.8 || ~3.6.2 || ~3.7.0"
pip = "^21.0.0"
tensorflow = {version = "^2.5.2", optional = true}
tensorflow_hub = { extras=["make_image_classifier"], version = "0.8.0", optional = true }
tensorflow-probability = { version = "0.10.0", optional = true }
scikit-learn = {version = "0.23.1", optional = true}
scikit-multilearn = {version = "0.2.0", optional = true}
pandas = {version = "1.1.1", optional = true}
nltk = "^3.5"
google-cloud-bigquery = { version = "1.26.1", optional = true}
google-cloud-logging = { version = "^2.7.0", optional = true }
Scrapy = "^2.5.0"
beautifulsoup4 = "^4.9.3"
tabulate = "^0.8.9"
click = "7.1.2"
scipy = {version = "1.5.4", optional = true}
nbconvert = "5.6.1"
traitlets = "4.3.3"
ipykernel = { version = "5.5.5", optional = true }
ipython = { version = "7.16.1", optional = true }
zipp = "^3.5.0"
importlib-metadata = "^4.6.1"
importlib-resources = {version = "^5.2.2"}
dataclasses = {version = "^0.8.0", python = ">=3.6.1, <3.7"}
transformers = {version = "^4.9.0", optional = true}
datasets = {version = "^1.10.2"}
torch = {version = "~1.9.0", optional = true}
dynaconf = "^3.1.4"
transformers-interpret = {version = "^0.5.2", optional = true}
streamlit = {version = "^1.2.0", optional = true}
Flask = {version = "^2.0.2", optional = true}
pytz = "^2021.3"
google-cloud-storage = { version = "^1.43.0", optional = true }
google-cloud-functions = { version = "^1.4.0", optional = true}
firebase-admin = { version = "^5.2.0", optional = true}
scrapydo = "^0.2.2"

[tool.poetry.dev-dependencies]
jupyter = {version = "^1.0.0", optional = true}
ipykernel = {version = "5.5.5"}
GPUtil = "^1.4.0"
pytest = "^5.4.3"
black = "^19.10b0"
coverage = { extras = ["toml"], version = "^5.1" }
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.1"
zipp = { version = "^3.1.0", python = "~3.6 || ~3.7" }
pylint = "^2.6.0"

[tool.poetry.extras]
classification = ["transformers", "transformers-interpret", "torch", "datasets" ,"scikit-learn", "scikit-multilearn", "pandas"]
tensorflow = ["tensorflow", "tensorflow_hub", "tensorflow-probability"]
dashboard  = ["streamlit"]
jupyter = ["jupyter", "ipykernel", "ipython"]
gcloud = ["Flask", "google-cloud-bigquery", "google-cloud-logging", "google-cloud-storage", "google-cloud-functions", "firebase-admin"]
all = ["transformers", "transformers-interpret", "torch", "datasets" ,"scikit-learn", "scikit-multilearn", "pandas", "tensorflow", "tensorflow_hub", "tensorflow-probability", "jupyter", "ipykernel", "ipython", "streamlit", "Flask", "google-cloud-bigquery", "google-cloud-logging", "google-cloud-storage", "google-cloud-functions", "firebase-admin"]

[tool.poetry.scripts]
c4v = "c4v.c4v_cli:c4v_cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["c4v"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
